# lingua-flex-backend

./: .env.example  .gitignore  README.md  architecture.md  astrology_postman_collection.json  backend_analysis.md  fastapi_chat.py  pyproject.toml  requirements.txt  schema.yml
accounts/: admin.py  models.py  serializers.py  serializers_new.py  signals.py  urls.py  urls_new.py  urls_students.py  views.py  views_new.py  views_students.py
astrology/: admin.py  ai_prompts.py  apps.py  fields.py  models.py  report_generator.py  serializers.py  services.py  tasks.py  urls.py  views.py
blogs/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
bookings/: admin.py  models.py  serializers.py  serializers_enhanced.py  urls.py  urls_enhanced.py  views.py  views_enhanced.py  zoom_service.py  zoom_webhooks.py
campaigns/: admin.py  email_service.py  models.py  serializers.py  urls.py  views.py
chat/: __init__.py  connections.py  dependencies.py  main.py
core/: admin.py  authentication.py  encryption.py  models.py  oauth_serializers.py  oauth_views.py  serializers.py  supabase_client.py  urls.py  views.py
family_tree/: models.py  serializers.py  tests.py  urls.py  views.py
gigs/: admin.py  models.py
lessons/: admin.py  models.py  serializers.py  urls.py  views.py
other/: ADMIN_DASHBOARD_GUIDE.md  ADMIN_PAYMENT_MANAGEMENT_GUIDE.md  API_Documentation_Simplified.md  AUTOMATIC_BOOKING_COMPLETION_TESTING_GUIDE.md  AUTOMATION_SETUP_GUIDE.md  AUTO_COMPLETION_TRACKING_GUIDE.md  AVAILABILITY_UPDATE_API_DOCS.md  BACKEND_API_SUMMARY.md  MIGRATION_GUIDE.md  (+180 more)
(+136 files in other folders)
